@@ -38,7 +38,6 @@ __all__ = ["MySQLConnectionAbstract", "MySQLCursorAbstract", "ServerInfo"]
 import asyncio
 import os
 import re
-import warnings
 import weakref
 
 from abc import ABC, abstractmethod
@@ -182,7 +181,6 @@ class MySQLConnectionAbstract(ABC):
         raw: bool = False,
         kerberos_auth_mode: Optional[str] = None,
         krb_service_principal: Optional[str] = None,
-        fido_callback: Optional[Union[str, Callable[[str], None]]] = None,
         webauthn_callback: Optional[Union[str, Callable[[str], None]]] = None,
         allow_local_infile: bool = DEFAULT_CONFIGURATION["allow_local_infile"],
         allow_local_infile_in_path: Optional[str] = DEFAULT_CONFIGURATION[
@@ -262,7 +260,6 @@ class MySQLConnectionAbstract(ABC):
         self._in_transaction: bool = False
         self._oci_config_file: Optional[str] = None
         self._oci_config_profile: Optional[str] = None
-        self._fido_callback: Optional[Union[str, Callable[[str], None]]] = fido_callback
         self._webauthn_callback: Optional[
             Union[str, Callable[[str], None]]
         ] = webauthn_callback
@@ -417,15 +414,6 @@ class MySQLConnectionAbstract(ABC):
                 raise InterfaceError(
                     KRB_SERVICE_PINCIPAL_ERROR.format(error="is incorrectly formatted")
                 )
-
-        if self._fido_callback:
-            warn_msg = (
-                "The `fido_callback` connection argument is deprecated and it will be "
-                "removed in a future release of MySQL Connector/Python. "
-                "Use `webauth_callback` instead"
-            )
-            warnings.warn(warn_msg, DeprecationWarning)
-            self._validate_callable("fido_callback", self._fido_callback, 1)
 
         if self._webauthn_callback:
             self._validate_callable("webauth_callback", self._webauthn_callback, 1)
