@@ -313,7 +313,6 @@ class MySQLConnection(MySQLConnectionAbstract):
             oci_config_file=self._oci_config_file,
             oci_config_profile=self._oci_config_profile,
             webauthn_callback=self._webauthn_callback,
-            fido_callback=self._fido_callback,
         )
         self._handle_ok(ok_pkt)
 
@@ -1087,7 +1086,6 @@ class MySQLConnection(MySQLConnectionAbstract):
             oci_config_file=self._oci_config_file,
             oci_config_profile=self._oci_config_profile,
             webauthn_callback=self._webauthn_callback,
-            fido_callback=self._fido_callback,
         )
 
         if not (self._client_flags & ClientFlag.CONNECT_WITH_DB) and database:
