@@ -14,6 +14,7 @@ v8.4.0
 - WL#16203: GPL License Exception Update
 - WL#16173: Update allowed cipher and cipher-suite lists
 - WL#16164: Implement support for new vector data type
+- WL#16127: Remove the FIDO authentication mechanism
 - WL#16053: Support GSSAPI/Kerberos authentication on Windows using authentication_ldap_sasl_client plug-in for C-extension
 
 v8.3.0
